--- a/package.json
+++ b/package.json
@@ -54,8 +54,13 @@
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-flow": "^7.14.5",
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "@testing-library/dom": "^7.21.4",
+    "@types/react": "^16.9.0",
     "css-loader": "^5.2.7",
-    "style-loader": "^2.0.0"
+    "style-loader": "^2.0.0",
+    "webpack": "^5.0.0"
   },
   "browserslist": {
     "production": [
