--- a/package.json
+++ b/package.json
@@ -8,76 +8,17 @@
     "url": "https://git.heroku.com/carpe-diction.git"
   },
   "scripts": {
-    "start": "cd server && node server.js",
-    "client:start": "cd client && react-scripts start",
-    "client:build": "cd client && react-scripts build",
-    "client:test": "cd client && react-scripts test",
-    "client:eject": "cd client && react-scripts eject",
-    "server:start": "cd server && node server.js",
-    "server:dev": "cd server && nodemon server.js"
-  },
-  "dependencies": {
-    "@babel/core": "^7.20.5",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@reach/router": "^1.3.4",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "ajv": "^8.11.2",
-    "ansi-regex": "^6.0.1",
-    "axios": "^0.21.4",
-    "bcrypt": "^5.1.0",
-    "bootstrap": "^4.6.2",
-    "cheerio": "1.0.0-rc.12",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.18.2",
-    "immer": "^9.0.16",
-    "jquery": "^3.6.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.15",
-    "node-pre-gyp": "^0.17.0",
-    "nodejs": "0.0.0",
-    "nodemon": "^2.0.20",
-    "nth-check": "^2.1.1",
-    "popper.js": "^1.16.1",
-    "postcss": "^8.4.19",
-    "react": "^16.8.0",
-    "react-bootstrap": "^1.6.6",
-    "react-dom": "^16.14.0",
-    "react-scripts": "^5.0.1",
-    "tar": "^6.1.12",
-    "typescript": "^4.9.3",
-    "web-vitals": "^1.1.2"
-  },
-  "devDependencies": {
-    "@babel/plugin-syntax-flow": "^7.14.5",
-    "@babel/plugin-transform-react-jsx": "^7.14.9",
-    "@testing-library/dom": "^7.21.4",
-    "@types/react": "^16.9.0",
-    "css-loader": "^5.2.7",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.0.0"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "start": "cd server && yarn start",
+    "client:start": "cd client && yarn start",
+    "client:build": "cd client && yarn build",
+    "client:test": "cd client && yarn test",
+    "client:eject": "cd client && yarn eject",
+    "server:start": "cd server && yarn start",
+    "server:dev": "cd server && yarn dev",
+    "install:all": "yarn install && cd client && yarn install && cd ../server && yarn install"
   },
   "engines": {
     "yarn": ">=1.0.0",
     "node": ">=14.0.0"
-  },
-  "resolutions": {
-    "bson": "^1.1.4"
   }
 }
