--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "scripts": {
     "start": "cd server && yarn start",
+    "build": "cd client && yarn build",
+    "postinstall": "cd client && yarn install && cd ../server && yarn install",
     "client:start": "cd client && yarn start",
     "client:build": "cd client && yarn build",
     "client:test": "cd client && yarn test",
