--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "cd server && yarn start",
-    "build": "cd client && yarn build",
+    "build": "cd client && yarn install && yarn build",
     "postinstall": "cd client && yarn install && cd ../server && yarn install",
     "client:start": "cd client && yarn start",
     "client:build": "cd client && yarn build",
