fix: ensure server dependencies are installed before start
Render was failing to start the server because dependencies weren't installed.
The postinstall script may not run reliably on Render, so the start script
now explicitly installs server dependencies before starting.

Changes:
- Updated start script to run 'yarn install' in server directory before start
- Ensures axios and other server dependencies are available at runtime
- Fixes "Cannot find module 'axios'" error during deployment

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://git.heroku.com/carpe-diction.git"
   },
   "scripts": {
-    "start": "cd server && yarn start",
+    "start": "cd server && yarn install && yarn start",
     "build": "cd client && yarn install && yarn build",
     "postinstall": "cd client && yarn install && cd ../server && yarn install",
     "client:start": "cd client && yarn start",
