--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,9 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@reach/router": "^1.3.4",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
-    "@testing-library/user-event": "^14.5.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "bootstrap": "^4.6.2",
     "popper.js": "^1.16.1",
@@ -22,7 +22,7 @@
   "devDependencies": {
     "@babel/plugin-syntax-flow": "^7.14.5",
     "@babel/plugin-transform-react-jsx": "^7.14.9",
-    "@testing-library/dom": "^7.21.4",
+    "@testing-library/dom": "^8.20.1",
     "@types/react": "^17.0.0",
     "css-loader": "^5.2.7",
     "style-loader": "^2.0.0",
@@ -48,5 +48,8 @@
   },
   "engines": {
     "node": ">=14.0.0"
+  },
+  "resolutions": {
+    "@reach/router": "^1.3.4"
   }
 }
