--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
-    "cheerio": "^1.0.0",
+    "cheerio": ">=1.0.0 <1.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -24,5 +24,8 @@
   },
   "engines": {
     "node": ">=14.0.0"
+  },
+  "resolutions": {
+    "cheerio": "1.0.0"
   }
 }
