Add preDeployCommand to install server dependencies in render.yaml
- Use preDeployCommand to install server dependencies after build and before start
- Ensures dependencies are available when server starts
- Fixes 'Cannot find module axios' error

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,8 @@ services:
     name: carpe-diction
     runtime: node
     buildCommand: cd client && yarn install && yarn build
-    startCommand: cd server && yarn install && yarn start
+    preDeployCommand: cd server && yarn install --production=false
+    startCommand: cd server && yarn start
     envVars:
       - key: NODE_ENV
         value: production
