Add prestart script to server package.json to auto-install dependencies
- Add prestart hook that runs yarn install before yarn start
- Ensures server dependencies are installed automatically before server starts
- Simplifies render.yaml startCommand
- Fixes 'Cannot find module axios' error

--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "main": "server.js",
   "scripts": {
+    "prestart": "yarn install",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
