--- a/client/package.json
+++ b/client/package.json
@@ -66,6 +66,7 @@
     "memfs": "^4.0.0",
     "nth-check": "^2.0.1",
     "postcss": "^8.4.31",
-    "webpack-dev-server": "^5.2.1"
+    "webpack-dev-server": "^5.2.1",
+    "qs": ">=6.14.2"
   }
 }
